# COMP-6130-proj

./: README.md  benchmark_svm.py  graph.py  kernels.py  main.py  pyproject.toml  run_tests.py  svm_classifier.py  test_svm_classifier.py
datasets/: readme.txt
