[project]
name = "comp-6130"
version = "0.1.0"
description = "Support Vector Machine implementation with graph dataset evaluation"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "networkx>=3.1",
    "hatchling>=1.27.0",
    "pyinstrument==5.0.3",
    "cvxopt==1.3.2",
    "pytest>=7.0.0",
    "pylint==3.3.7",
    "pyright==1.1.403",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
