[project]
name = "comp6130-project-svm"
version = "1.0.0"
description = "COMP-6130 Final Project: Support Vector Machine (SVM) implementation with graph dataset evaluation"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "networkx>=3.1",
    "hatchling>=1.27.0",
    "pyinstrument==5.0.3",
    "cvxopt==1.3.2",
]

[dependency-groups]
dev = [
    "pytest",
    "pylint",
    "pyright",
]
